# ai-codebase-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
src/: create_app.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2026_06_24_1241-882e149d2d93_init_table_repositories.py  2026_06_25_1111-3d22fa0ea8a6_add_index_repositories.py
src/api/: __init__.py  endpoint.py
src/core/: __init__.py  config.py  error_handlers.py
src/entities/: base.py  dto.py  schemas.py
src/infrastructure/: __init__.py
src/infrastructure/broker/: factory.py  publisher.py  rabbit_b.py
src/infrastructure/db/: db_halper.py  models.py
src/infrastructure/db/repo/: repository.py
src/infrastructure/repo/: repository_repo.py
src/service/: fabric.py  factory.py  repo_service.py
